# Realtime-edge-detector

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edgedetectionviewer/: MainActivity.java
app/src/main/java/com/example/edgedetectionviewer/gl/: MyGLRenderer.java
app/src/main/jni/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  package-lock.json  package.json
web/src/: main.ts
